// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An instance of EventsButton matches the snapshot while hovering 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-flat-56 MuiButton-colorInherit-72"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label-52"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root-80"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot with Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-flat-56 MuiButton-colorInherit-72"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title="August 27 *Meetup* MyEvent"
>
  <span
    className="MuiButton-label-52"
  >
    TEST_EVENTS_LABEL_2
    <span
      className=" null"
    >
       ●
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-80"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot without Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-flat-56 MuiButton-colorInherit-72"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label-52"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root-80"
  />
</a>
`;
